--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Docplanner Group</title>
     <link rel="stylesheet" href="/style.css" />
-    
-
+    <script
+      src="https://kit.fontawesome.com/04ab67b9d6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -53,6 +55,155 @@
         time to what really matters: their patients.
       </p>
     </section>
-    
+    <section class="third-section">
+      <div class="patients">
+        <i class="fas fa-users"></i>
+        <h1>For patients</h1>
+        <h3>Find a doctor, book a visit and solve any health-related doubt</h3>
+        <select>
+          <option>choose country</option>
+          <option value="http://www.doctoraliar.com">Argentina</option>
+          <option value="http://www.doctoralia.com.br">Brazil</option>
+          <option value="http://www.doctoralia.cl">Chile</option>
+          <option value="http://www.doctoralia.co">Colombia</option>
+          <option value="http://www.znamylekar.cz">Czech</option>
+          <option value="http://www.miodottore.it">Italy</option>
+          <option value="http://www.doctoralia.com.mx">Mexico</option>
+          <option value="http://www.doctoralia.pe">Peru</option>
+          <option value="http://www.znanylekarz.pl">Poland</option>
+          <option value="http://www.doctoralia.com.pt">Portugal</option>
+          <option value="http://www.doctoralia.es">Spain</option>
+          <option value="http://www.doktortakvimi.com">Turkey</option>
+        </select>
+      </div>
+      <div class="doctors">
+        <i class="fas fa-user-nurse"></i>
+        <h1>For doctors</h1>
+        <h3>Save time managing visits and cut no-shows by half</h3>
+        <select>
+          <option>choose country</option>
+          <option value="http://www.doctoraliar.com">Argentina</option>
+          <option value="http://www.doctoralia.com.br">Brazil</option>
+          <option value="http://www.doctoralia.cl">Chile</option>
+          <option value="http://www.doctoralia.co">Colombia</option>
+          <option value="http://www.znamylekar.cz">Czech</option>
+          <option value="http://www.miodottore.it">Italy</option>
+          <option value="http://www.doctoralia.com.mx">Mexico</option>
+          <option value="http://www.doctoralia.pe">Peru</option>
+          <option value="http://www.znanylekarz.pl">Poland</option>
+          <option value="http://www.doctoralia.com.pt">Portugal</option>
+          <option value="http://www.doctoralia.es">Spain</option>
+          <option value="http://www.doktortakvimi.com">Turkey</option>
+        </select>
+      </div>
+      <div class="clinics">
+        <i class="fas fa-clinic-medical"></i>
+        <h1>For clinics</h1>
+        <h3>Deliver an exceptional patient experience in your clinic</h3>
+        <select>
+          <option>2 to 20 specialists</option>
+          <option value="http://centrimedici.miodottore.it/saas/funzionalita">
+            Italy
+          </option>
+          <option
+            value="http://clinicas.doctoralia.com.mx/software-gestion-clinicas"
+          >
+            Mexico
+          </option>
+          <option value="http://placowka.znanylekarz.pl/system-od-znanylekarz">
+            Poland
+          </option>
+          <option
+            value="http://clinicas.doctoralia.es/software-gestion-clinicas"
+          >
+            Spain
+          </option>
+          <option value="http://kurumsal.doktortakvimi.com">Turkey</option>
+        </select>
+        <select>
+          <option>More than 20 specialists</option>
+          <option value="http://clinicas.doctoralia.com.br/tuotempo">
+            Brazil
+          </option>
+          <option
+            value="http://centrimedici.miodottore.it/marketplace/funzionalita"
+          >
+            Italy
+          </option>
+          <option value="http://clinicas.doctoralia.com.mx/tuotempo">
+            Mexico
+          </option>
+          <option value="http://placowka.znanylekarz.pl/poznaj-tuotempo">
+            Poland
+          </option>
+          <option value="http://clinicas.doctoralia.es/tuotempo">Spain</option>
+        </select>
+      </div>
+    </section>
+    <section class="fourth-section">
+      <h1>We are a global company with local culture</h1>
+      <div class="logos">
+        <i class="fab fa-accessible-icon fa-4x"></i>
+        <i class="fas fa-carrot fa-4x"></i>
+        <i class="far fa-id-card fa-4x"></i>
+        <i class="fas fa-ambulance fa-4x"></i>
+        <i class="far fa-moon fa-4x"></i>
+        <i class="fas fa-cloud-moon-rain fa-4x"></i>
+        <i class="fab fa-angrycreative fa-4x"></i>
+        <i class="fas fa-user-lock fa-4x"></i>
+        <i class="fab fa-accessible-icon fa-4x"></i>
+        <i class="fas fa-carrot fa-4x"></i>
+        <i class="far fa-id-card fa-4x"></i>
+        <i class="fas fa-ambulance fa-4x"></i>
+        <i class="far fa-moon fa-4x"></i>
+      </div>
+    </section>
+    <section class="fifth-section">
+      <div>
+        <h1>The world's biggest healthcare platform</h1>
+        <p>
+          We work from 7 offices all over the world, bringing Docplanner Group
+          to life in a dozen countries.
+        </p>
+      </div>
+      <div class="table">
+        <div class="column-one">
+          <div>
+            <i class="fas fa-flag fa-2x"></i>
+            <h2>Leader in 12 countries</h1>
+            <h6>
+              Poland, Brazil, Mexico, Spain, Italy, Turkey, Colombia, Czech
+              Republic, Portugal, Argentina, Peru and Chile
+            </h6>
+          </div>
+          <div>
+            <i class="fas fa-flag fa-2x"></i>
+            <h2>Leader in 12 countries</h1>
+            <h6>
+              Poland, Brazil, Mexico, Spain, Italy, Turkey, Colombia, Czech
+              Republic, Portugal, Argentina, Peru and Chile
+            </h6>
+          </div>
+        </div>
+        <div class="column-two">
+          <div>
+            <i class="fas fa-flag fa-2x"></i>
+            <h2>Leader in 12 countries</h1>
+            <h6>
+              Poland, Brazil, Mexico, Spain, Italy, Turkey, Colombia, Czech
+              Republic, Portugal, Argentina, Peru and Chile
+            </h6>
+          </div>
+          <div>
+            <i class="fas fa-flag fa-2x"></i>
+            <h2>Leader in 12 countries</h1>
+            <h6>
+              Poland, Brazil, Mexico, Spain, Italy, Turkey, Colombia, Czech
+              Republic, Portugal, Argentina, Peru and Chile
+            </h6>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
